--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 09:19:00 AM</p>
+    <p class="lastupdate">09/15/2020 09:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">58.6&#176;F</td>
+        <td class="data">59.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">58.6&#176;F</td>
+        <td class="data">59.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">58.6&#176;F</td>
+        <td class="data">59.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.6&#176;F</td>
+        <td class="data">46.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.051 inHg (0.030)</td>
+        <td class="data">30.049 inHg (0.028)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ESE (112&#176;)</td>
+        <td class="data">1 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.5&#176;F</td>
+        <td class="data">73.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:18:23 AM">
-            45.6</span><br/>
+          <span title="09:21:09 AM">
+            46.9</span><br/>
           <span title="07:43:47 AM">
             42.0</span>
         </td>
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="02:06:10 AM">
-            2</span><br/>
-          317
+          <span title="09:21:25 AM">
+            3</span><br/>
+          28
         </td>
         <td class="data new_row hilo_week">
           <span title="04:43:42 PM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          307
+          324
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 18 hours, 32 minutes</td>
+      <td class="data">13 days, 18 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 18 hours, 32 minutes</td>
+      <td class="data">13 days, 18 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
