--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 10:24:00 AM</p>
+    <p class="lastupdate">09/15/2020 10:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">67.5&#176;F</td>
+        <td class="data">68.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">67.5&#176;F</td>
+        <td class="data">68.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">67.5&#176;F</td>
+        <td class="data">68.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.2&#176;F</td>
+        <td class="data">49.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">52%</td>
+        <td class="data">51%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.046 inHg (0.011)</td>
+        <td class="data">30.046 inHg (0.006)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph E (90&#176;)</td>
+        <td class="data">1 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.0&#176;F</td>
+        <td class="data">74.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:23:41 AM">
-            67.5</span><br/>
+          <span title="10:28:39 AM">
+            68.1</span><br/>
           <span title="07:07:35 AM">
             49.7</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:23:41 AM" class="hival">
-            67.5</span>
+          <span title="10:28:39 AM" class="hival">
+            68.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:43:47 AM">
             79</span><br/>
-          <span title="10:23:27 AM">
-            52</span>
+          <span title="10:25:00 AM">
+            51</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          342
+          21
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 19 hours, 37 minutes</td>
+      <td class="data">13 days, 19 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 19 hours, 37 minutes</td>
+      <td class="data">13 days, 19 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
