--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 10:59:00 AM</p>
+    <p class="lastupdate">09/15/2020 11:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">72.1&#176;F</td>
+        <td class="data">73.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">72.1&#176;F</td>
+        <td class="data">73.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">72.1&#176;F</td>
+        <td class="data">73.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.0&#176;F</td>
+        <td class="data">49.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">44%</td>
+        <td class="data">43%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.042 inHg (-0.002)</td>
+        <td class="data">30.040 inHg (-0.005)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph E (90&#176;)</td>
+        <td class="data">1 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.3&#176;F</td>
+        <td class="data">74.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:58:00 AM">
-            72.1</span><br/>
+          <span title="11:03:59 AM">
+            73.0</span><br/>
           <span title="07:07:35 AM">
             49.7</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:58:00 AM" class="hival">
-            72.1</span>
+          <span title="11:03:59 AM" class="hival">
+            73.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:43:47 AM">
             79</span><br/>
-          <span title="10:56:37 AM">
-            44</span>
+          <span title="11:03:27 AM">
+            43</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          70
+          72
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 20 hours, 12 minutes</td>
+      <td class="data">13 days, 20 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 20 hours, 12 minutes</td>
+      <td class="data">13 days, 20 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
